--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><title>GearUp Cloud</title><base href="/"></head><body><div id="root"></div><script type="text/javascript" src="./app.42e6036b54adc19759cf.js?42e6036b54adc19759cf"></script></body></html>
+<html><head><title>GearUp Cloud</title></head><body><div id="root"></div><script type="text/javascript" src="./app.f48e422f936f68aad739.js?f48e422f936f68aad739"></script></body></html>
